docker/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
  labels:
    argocd.argoproj.io/instance: nublado
    name: workflow-dispatcher
  name: workflow-dispatcher
  namespace: nublado
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: workflow-dispatcher
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: workflow-dispatcher
    spec:
      containers:
      - env:
        - name: HELM_TAG
          value: "nublado"
        - name: DEBUG
          value: "TRUE"
        - name: WF_NO_VERIFY_SIGNATURE
          value: "TRUE"
        - name: WF_NO_VERIFY_AUDIENCE
          value: "TRUE"
        image: lsstsqre/wfdispatcher:0.0.1
        imagePullPolicy: Always
        name: workflow-dispatcher
        ports:
        - containerPort: 8080
          name: api
          protocol: TCP
        resources:
          limits:
            cpu: 1.0
            memory: 1G
          requests:
            cpu: 400m
            memory: 512M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/metadata
          name: metadata
        - mountPath: /opt/jwt
          name: jwt-cert
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 768
        runAsGroup: 768
        runAsUser: 768
      serviceAccount: nublado-hub
      serviceAccountName: nublado-hub
      terminationGracePeriodSeconds: 30
      volumes:
      - downwardAPI:
          defaultMode: 420
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.annotations
            path: annotations
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.labels
            path: labels
        name: metadata
      - configMap:
          defaultMode: 420
          items:
          - key: signing-certificate.pem
            path: signing-certificate.pem
          name: nublado-jwt-cert
        name: jwt-cert
