docker/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: workflow-dispatcher
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/proxy-body-size: "0m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /wf(/|$)(.*)
        backend:
          serviceName: workflow-dispatcher
          servicePort: 8080
